# dprint-plugin-sql

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deno.json  dprint.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check_updates.yml  ci.yml
deployment/: schema.json
deployment/npm/: README.md  index.test.js  package-lock.json  package.json  setup.js
scripts/: generateReleaseNotes.ts  update.ts
src/: format_text.rs  wasm_plugin.rs
src/configuration/: builder.rs  configuration.rs  resolve_config.rs
tests/: test.rs
tests/specs/Basic/: Basic_All.txt
tests/specs/Config/: Casing.txt  CasingLower.txt  CasingUpper.txt  Indent.txt  IndentWidth.txt  JoinsAsTopLevel.txt  LinesBetweenQueries.txt  UppercaseLegacy.txt
