[package]
name = "dprint-plugin-sql"
version = "0.2.0"
authors = ["David Sherret <dsherret@gmail.com>"]
edition = "2024"
homepage = "https://github.com/dprint/dprint-plugin-sql"
keywords = ["formatting", "formatter", "sql"]
license = "MIT"
repository = "https://github.com/dprint/dprint-plugin-sql"
description = "SQL formatter for dprint via sqlformat-rs."

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false
panic = "abort"

[features]
wasm = ["serde_json", "dprint-core/wasm"]

[dependencies]
anyhow = "1.0.51"
dprint-core = { version = "0.67.4", default-features = false }
serde = { version = "1.0.88", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
sqlformat = "0.5.0"

[dev-dependencies]
dprint-development = "0.10.1"
serde_json = { version = "1.0" }
